--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <title>Test</title>
 </head>
 <body>
+<!--HEADER SECTION-->
     <header class="header-s">
-        <div class="header-s__wrap header-s__container">
+        <div class="header-s__wrap">
             <img src="img/logo.png" alt="logo">
             <h1>Центр рекламных <span>Технологий</span></h1>
             <div class="header-title">
@@ -33,5 +34,33 @@
             </div>
         </div>
     </header>
+<!--HEADER SECTION:END-->
+
+<!--INTRO SECTION-->
+    <section class="intro-s">
+        <div class="intro-s__wrap container">
+            <article class="intro__title">
+                <div class="intro__img">
+                    <img src="img/color_img.png" alt="">
+                    <p>
+                        Lorem ipsum dolor sit amet, et est libris audiam consequuntur,
+                        no quo civibus officiis ponderum. Tale fugit ludus ius ei.
+                    </p>
+                </div>
+            </article>
+            <article class="into__sale">
+                <img src="img/sale.png" alt="">
+                <div class="intro__top">
+                    <h2>
+                        <span>Топ</span> продаж
+                        <img src="img/bomb_1.png" alt="">
+                    </h2>
+                </div>
+            </article>
+        </div>
+    </section>
+<!--INTRO SECTION:END-->
+
+<!--FOOTER SECTION-->
 </body>
 </html>
