Footer Section. Done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <!--HEADER SECTION-->
     <header class="header-s">
         <div class="header-s__wrap">
-            <img src="img/logo.png" alt="logo">
+            <a href="#">
+                <img src="img/logo.png" alt="logo">
+            </a>
             <h1>Центр рекламных <span>Технологий</span></h1>
             <div class="header-title">
                 <p class="header-title__main-text">
@@ -62,5 +64,78 @@
 <!--INTRO SECTION:END-->
 
 <!--FOOTER SECTION-->
+    <footer class="footer-s">
+        <div class="footer-s__wrap container">
+            <div class="footer-s__logo">
+                <a href="#">
+                    <img src="img/logo.png" alt="">
+                </a>
+                <p>
+                    2014 - BIGbomb <br>
+                    Рекламно-производительная компания
+                    Все права защищены
+                </p>
+            </div>
+            <div class="footer-s__list">
+                <ul>
+                    <li>
+                        <a href="#">
+                            Принадлежности для письма
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Офис
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Электроника
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Посуда
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Текстиль
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-s__list">
+                <ul>
+                    <li>
+                        <a href="#">
+                            Сумки
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Полиграфическая продукция
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Бумажные стаканчики
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Дипломы
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Контакты
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <img src="img/bomb_2.png" class="footer-s__bomb">
+        </div>
+    </footer>
 </body>
 </html>
