Fixed some details

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <title>Test</title>
 </head>
 <body>
 <!--HEADER SECTION-->
     <header class="header-s">
-        <div class="header-s__wrap">
+        <div class="header-s__wrap header-container">
             <a href="#">
                 <img src="img/logo.png" alt="logo">
             </a>
